src/tests/ui/core/bigint-negative-shift.vif
fn main() void {
    comptime const n = 0 - 1;
    comptime const x = 1 << n;
}

//@ args: build
//@ stderr:
// error: negative shift amount in comptime shift
//   --> src/tests/ui/core/bigint-negative-shift.vif:3:24
//   |
// 3 |     comptime const x = 1 << n;
//   |                        ^^^^^^
//
